# syncmoss

./: .gitignore  COPYING.txt  LICENSE  NOTICE.txt  README.md  pyproject.toml  requirements.txt  syncmoss_test.py
.github/workflows/: _MacOS.yml  _PyPI.yml  _TagRelease.yml  _Tests.yml  _UploadRelease.yml  _Version.yml  _Wheels.yml  _WindowsExe.yml  release.yml
Lib_test/: test.mdl
bundle/: MacOS.spec  Windows.spec  bundle.py  macos_bundle.py
source_code/: Calibration.py  INSexp.txt  KB_id14_old.txt  minimi_lib.py  models.py  models_NFS.py  models_positions.py  prog_raw_qt.py  result.txt
src/: ABSorber3.txt  Calibration.py  INSexp.txt  INSint.txt  Instrumental.py  Library_io.py  constants.py  fitting_io.py  instrumental_io.py  main.py  model.mdl  model_io.py  models.py  models_positions.py  parameters_table.py  prog_raw.py  prog_raw_qt.py  result_model.mdl  results_table.py  spectrum_io.py  spectrum_plotter.py  start.sh  support_math.py  syncmoss_main.py  test_graf.txt  test_param.txt
src/parameters/: INSexp.txt  INSint.txt
syncmoss/: Calibration.py  Hamiltonian_helper.py  Library_io.py  Library_window.py  constants.py  fitting_io.py  instrumental_io.py  main.py  minimi_lib.py  model_io.py  models.py  models_positions.py  parameters_table.py  results_table.py  spectrum_io.py  spectrum_plotter.py  syncmoss_main.py  theme_dark.json  theme_light.json
syncmoss/parameters/: Be.txt  KB.txt  (+4 more)
tests/: conftest.py  syncmoss_test.py  test_expression_validation.py  test_gui_smoke.py  test_instrumental_metadata.py  test_library_io.py  test_model_io.py  test_support_math.py
