[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncmoss"
version = "0.1.0"
description = "SYNCmoss — Mössbauer spectroscopy analysis application"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sergey Yaroslavtsev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "PySide6",
]

[project.urls]
Homepage = "https://github.com/sergey-yaroslavtsev/syncmoss"
Repository = "https://github.com/sergey-yaroslavtsev/syncmoss"

[project.gui-scripts]
syncmoss = "syncmoss.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
syncmoss = "src"

[tool.setuptools.package-data]
syncmoss = [
    "icons/*.png",
    "icons/*.ico",
    "icons/*.svg",
    "parameters/*.txt",
    "*.json",
    "*.dat",
]
